Allow reflexive access to java packages from FST